# ROV_UMN

./: README.md
ROV_IMU/: README.md  ROV_IMU.ino  ROV_IMU.vcxproj  ROV_IMU.vcxproj.filters  Solution1.sln  base_fcns.cpp  base_fcns.h  constants.h  encoder.cpp  encoder.h  nav.cpp  nav.h  pololu_imu.cpp  pololu_imu.h  yei.cpp  yei.h
ROV_IMU/Debug/: matlab_fcns_eigen_fcns_dbg.txt  vc120.idb
ROV_IMU/Visual Micro/: .ROV_IMU.vsarduino.h  Compile.vmps.xml  (+1 more)
picam_gpu/: CMakeLists.txt  README.md
picam_gpu/cam_calib/: picam_calib.yml  picam_calib_init_old.yml  picam_calib_old.yml  picam_calib_proto_air.yml  picam_calib_proto_water.yml
picam_gpu/cam_calib/broken_camera/: picam_calib_proto.yml
picam_gpu/cam_calib/marker_color_air_default/: markercolor.txt
picam_gpu/cam_calib/marker_color_air_prototype/: markercolor.txt
picam_gpu/cam_calib/marker_color_uw/: markercolor.txt
picam_gpu/cam_calib/marker_color_uw/new2/: markercolor.txt
picam_gpu/cam_calib/old/: picam_calib.yml
picam_gpu/include/: camera.h  cameracontrol.h  graphics.h  mouse_click.h  opencv_fcns.h  opengl_fcns.h  so3.h  wifiudp.h
picam_gpu/shaders/: hsvfragshader.glsl  kernelfragshader.glsl  kernelxfragshader.glsl  kernelyfragshader.glsl  labfragshader.glsl  laplacianfragshader.glsl  rgb2lab_new.glsl  simplefragshader.glsl  simplevertshader.glsl  threshfragshader.glsl  undistortfragshader.glsl  yuvfragshader.glsl
picam_gpu/src/: camera.cpp  cameracontrol.cpp  graphics.cpp  mouse_click.cpp  obsolete_fcns.cpp  opencv_fcns.cpp  opengl_fcns.cpp  picam.cpp  so3.cpp  wifiudp.cpp
(+4 files in other folders)
