cmake_minimum_required(VERSION 2.8)
project( picam )
SET(COMPILE_DEFINITIONS -Werror)
find_package( OpenCV REQUIRED )
include_directories(/opt/vc/include)
include_directories(userland-master/interface/vcos)
include_directories(userland-master)
include_directories(userland-master/interface/vcos/pthreads)
include_directories(userland-master/interface/vmcs_host/linux)
include_directories(userland-master/host_applications/linux/libs/bcm_host/include)
include_directories(src/)
include_directories(include/)
include_directories(shaders/)
link_directories(/opt/vc/lib)

add_definitions ("-Wall")
add_executable(picam src/picam.cpp src/camera.cpp src/cameracontrol.cpp src/graphics.cpp src/so3.cpp src/opencv_fcns.cpp src/opengl_fcns.cpp src/wifiudp.cpp)

target_link_libraries(picam libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so GLESv2 EGL ncurses wiringPi pthread rt ${OpenCV_LIBS})
